--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,10 @@
 /* style me */
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("/public/stock_photos/dumbbells.jpg");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
