--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.form-control {
-    display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
+.questions-container {
+    width: 50%;
 }
