--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Im a boilerplate</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./public/css/style.css">
 </head>
 
 <body>
@@ -24,12 +24,25 @@
     <main id="main-container">
       
       {{{ body }}}
-
-    <div class="mb-3">
-    <label for="question1" class="form-label">Question 1</label>
-    <input type="text" class="form-control" id="question1">
-  </div>
-
+      <div class="questions-container">
+        <div class="mb-3">
+        <label for="question1" class="form-label">What is your current weight?</label>
+        <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+        <label for="question2" class="form-label">What is your current height?</label>
+        <input type="text" class="form-control">
+        </div>
+          <div class="mb-3">
+        <label for="question3" class="form-label">What is your target weight?</label>
+        <input type="text" class="form-control">
+          </div>
+          <div class="mb-3">
+        <label for="question4" class="form-label">Describe your fitness goals.</label>
+        <input type="text" class="form-control">
+          </div>
+      </div>
+      <img src="/images/photos/ropes.jpg" alt="Hero Image">
     </main>
     <footer>
       
