--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
         <input type="text" class="form-control">
           </div>
       </div>
-      <img src="/images/photos/rockclimbing.jpg" alt="Hero Image">
+
     </main>
     <footer>
       
@@ -54,7 +54,7 @@
   <script src="/js/logout.js"></script>
   {{/if}}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="/photos/images.js"></script>
+  <script src="/photos/images.js" defer></script>
 </body>
 
 </html>
