--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,2 +1,22 @@
 <!-- Loop over each object in the projects array -->
-<h1>I AM HERE TO BE USED</h1>
+
+     <div class="questions-container">
+        <div class="mb-3">
+        <label for="question1" class="form-label">What is your current weight?</label>
+        <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+        <label for="question2" class="form-label">What is your current height?</label>
+        <input type="text" class="form-control">
+        </div>
+          <div class="mb-3">
+        <label for="question3" class="form-label">What is your target weight?</label>
+        <input type="text" class="form-control">
+          </div>
+          <div class="mb-3">
+        <label for="question4" class="form-label">Describe your fitness goals.</label>
+        <input type="text" class="form-control">
+          </div>
+      </div>
+
+      
