--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,61 @@
 .form-control {
     display: block;
-    width: 30%;
+    width: 90%;
 }
 body {
-    /* background-image: url({{selectedImage}}); */
     background-repeat: no-repeat;
     background-size: cover;
-  }
-
+}
+.questions-container {
+    width: 500px;
+    margin-left: 30px;
+    transform: translateY(25%);
+}
 .form-label {
-    color: #f5f5f5
+    color: #f0f8ff;
+}
+.form-group {
+    color: #f0f8ff;
+}
+.col-md-6 {
+    padding: 20px;
+    width: 400px;
+    height: fit-content;
+    color:#f0f8ff;
+    margin-top: 40px;
+    padding-left: 15px;
+    padding-top: 10px; 
+}
+.col {
+    padding-left: 30px;
+    transform: translateY(15%)
+}
+.btn {
+    background-color: rgb(38, 144, 117);
+    color: #f0f8ff;
+}
+.btn:hover {
+    background-color: #034320;
+    color: #f0f8ff;
+}
+.navbar {
+    background-color: rgb(38, 144, 117);
+}
+.nav-link {
+    color: #f0f8ff !important;
+}
+.navbar-brand {
+    color: #f0f8ff;
+    font-size: xx-large;
+}
+.collapse.navbar-collapse {
+    flex-direction: row-reverse;
+    transform: translateX(-25px);
+    padding-left: 10px;
+}
+.navbar-nav .nav-link:hover {
+    color: #034320 !important; /* Change the color on hover */
+}
+.navbar-brand:hover {
+    color: #034320 !important; /* Change the brand color on hover */
 }
