--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <!-- Loop over each object in the projects array -->
 
-     <div class="questions-container">
+     <div class="questions-container p-3 mb-2 bg-body-tertiary bg-opacity-75">
         <div class="mb-3">
         <label for="question1" class="form-label">What is your current weight?</label>
         <input type="text" class="form-control">
@@ -17,6 +17,7 @@
         <label for="question4" class="form-label">Describe your fitness goals.</label>
         <input type="text" class="form-control">
           </div>
+        <button type="button" class="btn btn-secondary">Submit</button>
+
       </div>
 
-      
