--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <!-- Loop over each object in the projects array -->
 
-     <div class="questions-container p-3 mb-2 bg-body-tertiary bg-opacity-75 border border-white rounded-4">
+     <div class="questions-container p-2 text-white bg-dark border border-white rounded-4">
         <div class="mb-3">
         <label for="question1" class="form-label">What is your current weight?</label>
         <input type="text" class="form-control">
@@ -20,4 +20,5 @@
         <button type="button" class="btn btn-secondary">Submit</button>
 
       </div>
+
 
