--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,51 +8,28 @@
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
   {{#if logged_in}}
-  <a href="/profile">profile</a> |
+  <a href="/profile">profile</a>
   <button class="no-button" id="logout">logout</button>
   {{else}}
-  <main id="main-container">
-    <h1>Login</h1>
+  <main> 
+    <div class="login-container p-2 text-white bg-dark border border-white rounded-4">
+      <h1>Login</h1>
 
-    <form id="login-form">
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-      <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-      <button type="submit">Login</button>
-    </form>
+      <form id="login-form">
+        <div>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required>
+        </div>
+        <button type="button" class="btn btn-secondary">Login</button>
+      </form>
 
-    <p>Don't have an account? <a href="/signup">Sign up</a></p>
+      <p>Don't have an account? <a href="/signup">Sign up</a></p>
   </main>
   {{/if}}
 
