--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/login">Login/Signup</a>
+            <a class="nav-link" href="/login">Login</a>
           </li>
         </ul>
       </div>
