--- a/views/questions1.handlebars
+++ b/views/questions1.handlebars
@@ -1,21 +1,24 @@
-<!-- Loop over each object in the projects array -->
 
      <div class="questions-container p-2 text-white bg-dark border border-white rounded-4">
         <div class="mb-3">
-        <label for="question1" class="form-label">What is your current weight?</label>
+        <label for="question1" class="form-label">What is your age?</label>
         <input type="text" class="form-control">
         </div>
         <div class="mb-3">
-        <label for="question2" class="form-label">What is your current height?</label>
+        <label for="question2" class="form-label">What is your current weight?</label>
+        <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+        <label for="question3" class="form-label">What is your current height?</label>
         <input type="text" class="form-control">
         </div>
           <div class="mb-3">
-        <label for="question3" class="form-label">What is your target weight?</label>
+        <label for="question4" class="form-label">What is your target weight?</label>
         <input type="text" class="form-control">
           </div>
           <div class="mb-3">
-        <label for="question4" class="form-label">Describe your fitness goals.</label>
+        <label for="question5" class="form-label">Describe your fitness goals.</label>
         <input type="text" class="form-control">
           </div>
-        <button type="button" class="btn btn-secondary">Submit</button>
+        <a type="button" class="btn btn-secondary" href="/questions2">Next</a>
     </div>
