--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,24 +1,8 @@
 <!-- Loop over each object in the projects array -->
 
      <div class="questions-container p-2 text-white bg-dark border border-white rounded-4">
-        <div class="mb-3">
-        <label for="question1" class="form-label">What is your current weight?</label>
-        <input type="text" class="form-control">
-        </div>
-        <div class="mb-3">
-        <label for="question2" class="form-label">What is your current height?</label>
-        <input type="text" class="form-control">
-        </div>
-          <div class="mb-3">
-        <label for="question3" class="form-label">What is your target weight?</label>
-        <input type="text" class="form-control">
-          </div>
-          <div class="mb-3">
-        <label for="question4" class="form-label">Describe your fitness goals.</label>
-        <input type="text" class="form-control">
-          </div>
-        <button type="button" class="btn btn-secondary">Submit</button>
-
+      <p>Fit Genie is an interactive AI fitness program designer application in which the user enters personal information and fitness goals. The application creates an incremented fitness program using the given fitness goals, resources (exercise modalities and scheduling needs). The user can then track their progress in the app and allow the fitness program to be adjusted accordingly. Take control of your workouts and train as you would with a professional coach.</p>
+        <a type="button" class="btn btn-secondary" href="/questions1">Get Started</a>
       </div>
 
 
