--- a/views/questions2.handlebars
+++ b/views/questions2.handlebars
@@ -1,7 +1,7 @@
 
      <div class="questions-container p-2 text-white bg-dark border border-white rounded-4">
         <div class="mb-3">
-        <label for="question1" class="form-label">Do you go to a gym?</label>
+        <label for="question1" class="form-label">Do you have membership to a gym?</label>
         <input type="text" class="form-control">
         </div>
         <div class="mb-3">
@@ -9,11 +9,11 @@
         <input type="text" class="form-control">
         </div>
           <div class="mb-3">
-        <label for="question3" class="form-label">What is your target weight?</label>
+        <label for="question3" class="form-label">What are some outdoor activites you enjoy?</label>
         <input type="text" class="form-control">
           </div>
           <div class="mb-3">
-        <label for="question4" class="form-label">Describe your fitness goals.</label>
+        <label for="question4" class="form-label">.</label>
         <input type="text" class="form-control">
           </div>
         <a type="button" class="btn btn-secondary" href="/questions1">Back</a>
