--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav btn-group" role="group" aria-label="Basic outlined example">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/homepage">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Features</a>
