--- a/views/questions2.handlebars
+++ b/views/questions2.handlebars
@@ -5,15 +5,19 @@
         <input type="text" class="form-control">
         </div>
         <div class="mb-3">
+        <label for="question1" class="form-label">Do you have access to fitness equipment at home?</label>
+        <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+        <label for="question1" class="form-label">What are some outdoor activities you enjoy?</label>
+        <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
         <label for="question2" class="form-label">How many days per week are you able to exercise for an hour or more?</label>
         <input type="text" class="form-control">
         </div>
           <div class="mb-3">
-        <label for="question3" class="form-label">What are some outdoor activites you enjoy?</label>
-        <input type="text" class="form-control">
-          </div>
-          <div class="mb-3">
-        <label for="question4" class="form-label">.</label>
+        <label for="question3" class="form-label">What is your preferred exercise intensity level?</label>
         <input type="text" class="form-control">
           </div>
         <a type="button" class="btn btn-secondary" href="/questions1">Back</a>
