more pathing redirect

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,13 +11,13 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/homepage">Fit Genie</a>
+      <a class="navbar-brand" href="/">Fit Genie</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav btn-group" role="group" aria-label="Basic outlined example">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/homepage">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Features</a>
