--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,16 +17,17 @@
     <div class="login-container p-2 text-white bg-dark border border-white rounded-4">
       <h1>Login</h1>
 
-      <form id="login-form">
+      <form action="/login" method="POST" id="login-form">
         <div>
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required>
         </div>
+       
         <div>
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" required>
         </div>
-        <button type="button" class="btn btn-secondary">Login</button>
+        <button type="submit" class="btn btn-secondary">Login</button>
       </form>
 
       <p>Don't have an account? <a href="/signup">Sign up</a></p>
