--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Sign Up</title>
-</head>
-<body>
-  <div class="signup-container p-2 text-white bg-dark border border-white rounded-4">
-    <h1>Sign Up</h1>
-    <form action="/signup" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
-      <br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      <br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-      <br>
-      <a type="button" class="btn btn-secondary" id="signup-button" href="/homepage">Sign Up</a>
-    </form>
-  </div>
-</body>
-</html>
+<div class="signup-container p-2 text-white bg-dark border border-white rounded-4">
+  <h1>Sign Up</h1>
+  <form class="signup-form">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required>
+    <br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+    <br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
+    <br>
+    <button type="submit" class="btn btn-secondary" id="signup-button">Sign Up</button>
+  </form>
+</div>
+
+<script src="/js/login.js"></script>
