--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,9 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Fit Genie</a>
+      <a class="navbar-brand" href="/">
+  <img src="/photos/FitGenie.jpg" alt="Fit Genie Logo" class="logo">
+</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,7 +52,19 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
-
+<script>
+window.embeddedChatbotConfig = {
+chatbotId: "sjCMMJm8_-yrjiZoOUoYw",
+domain: "www.chatbase.co"
+}
+</script>
+<script
+src="https://www.chatbase.co/embed.min.js"
+chatbotId="sjCMMJm8_-yrjiZoOUoYw"
+domain="www.chatbase.co"
+defer>
+</script>
   <script src="/photos/images.js" defer></script>
+
 </body>
 </html>
