added front end to prompt submission

--- a/views/questions1.handlebars
+++ b/views/questions1.handlebars
@@ -2,23 +2,23 @@
      <div class="questions-container p-2 text-white bg-dark border border-white rounded-4">
         <div class="mb-3">
         <label for="question1" class="form-label">What is your age?</label>
-        <input type="text" class="form-control">
+        <input id="question1" type="text" class="form-control">
         </div>
         <div class="mb-3">
-        <label for="question2" class="form-label">What is your current weight?</label>
-        <input type="text" class="form-control">
+        <label  for="question2" class="form-label">What is your current weight?</label>
+        <input id="question2" type="text" class="form-control">
         </div>
         <div class="mb-3">
-        <label for="question3" class="form-label">What is your current height?</label>
-        <input type="text" class="form-control">
+        <label for="question3" class="form-label">What is your height?</label>
+        <input id="question3" type="text" class="form-control">
         </div>
           <div class="mb-3">
         <label for="question4" class="form-label">What is your target weight?</label>
-        <input type="text" class="form-control">
+        <input id="question4" type="text" class="form-control">
           </div>
           <div class="mb-3">
         <label for="question5" class="form-label">Describe your fitness goals.</label>
-        <input type="text" class="form-control">
+        <input id="question5" type="text" class="form-control">
           </div>
         <a type="button" class="btn btn-secondary" href="/questions2">Next</a>
     </div>
