--- a/views/questions2.handlebars
+++ b/views/questions2.handlebars
@@ -1,24 +1,24 @@
 
      <div class="questions-container p-2 text-white bg-dark border border-white rounded-4">
         <div class="mb-3">
-        <label for="question1" class="form-label">Do you have membership to a gym?</label>
-        <input type="text" class="form-control">
+        <label  for="question6" class="form-label">Do you have membership to a gym?</label>
+        <input id="question6" type="text" class="form-control">
         </div>
         <div class="mb-3">
-        <label for="question1" class="form-label">Do you have access to fitness equipment at home?</label>
-        <input type="text" class="form-control">
+        <label  for="question7" class="form-label">Do you have access to fitness equipment at home?</label>
+        <input id="question7" type="text" class="form-control">
         </div>
         <div class="mb-3">
-        <label for="question1" class="form-label">What are some outdoor activities you enjoy?</label>
-        <input type="text" class="form-control">
+        <label for="question8" class="form-label">What are some outdoor activities you enjoy?</label>
+        <input id="question8" type="text" class="form-control">
         </div>
         <div class="mb-3">
-        <label for="question2" class="form-label">How many days per week are you able to exercise for an hour or more?</label>
-        <input type="text" class="form-control">
+        <label for="question9" class="form-label">How many days per week are you able to exercise for an hour or more?</label>
+        <input id="question9" type="text" class="form-control">
         </div>
           <div class="mb-3">
-        <label for="question3" class="form-label">What is your preferred exercise intensity level?</label>
-        <input type="text" class="form-control">
+        <label  for="question10" class="form-label">What is your preferred exercise intensity level?</label>
+        <input id="question10" type="text" class="form-control">
           </div>
         <a type="button" class="btn btn-secondary" href="/questions1">Back</a>
         <a type="button" class="btn btn-secondary" href="/questions3">Next</a>
