--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,3 +85,6 @@ body {
     top: 10px; /* Adjust the top position to your desired value */
     left: 10px; /* Adjust the left position to your desired value */
   }
+  #workoutPlanContainer {
+    transform: translateX(27%) translateY(60px)
+  }
