--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,10 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">
+      <h1 class="navbar-brand" href="/"></h1>
   <img src="/photos/FitGenie.jpg" alt="Fit Genie Logo" class="logo">
 </a>
+  <a id="brand-title" href="/">Fit Genie</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -65,7 +66,8 @@ chatbotId="sjCMMJm8_-yrjiZoOUoYw"
 domain="www.chatbase.co"
 defer>
 </script>
-  <script src="/photos/images.js" defer></script>
+<script src="/photos/images.js" defer></script>
+<script src="js/submit-prompts.js" defer></script>
 
 </body>
 </html>
