--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,18 +6,10 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-#brand-title {
-    transform: translateX(61%) translateY(3%);
-    color: #ffffff;
-    font-family: cursive;
-    font-style: italic;
-    font-size: xxx-large;
-    text-decoration: none;
-}
-.questions-container {
+.evaluation-container {
     width: 500px;
     margin-left: 30px;
-    transform: translateY(25%);
+    transform: translateY(85px);
     background-color: rgba(55, 55, 70, 0.75) !important;
 }
 #homepage_message {
@@ -53,6 +45,15 @@ body {
     background-color: #0c1667;
     color: #ffffff;
 }
+#brand-title {
+    color: #ffffff;
+    font-family: emoji;
+    font-style: italic;
+    font-size: xxx-large;
+    text-decoration: none;
+    width: fit-content;
+    transform: translateX(150px)
+}
 .navbar {
     background-color: rgb(31, 83, 74);
     height: 55px;
@@ -70,11 +71,19 @@ body {
     transform: translateX(-25px);
     padding-left: 10px;
 }
+.navbar-nav {
+    flex-direction: row;
+}
 .navbar-nav .nav-link:hover {
     background-color: #034320;
 }
 .navbar-brand:hover {
     color: #ffffff !important; /* Change the brand color on hover */
+}
+.container-fluid {
+    display: inline-flex;
+    flex-direction: row;
+
 }
 .login-container {
     width: 350px;
@@ -96,10 +105,7 @@ body {
     top: 10px; /* Adjust the top position to your desired value */
     left: 10px; /* Adjust the left position to your desired value */
   }
-  #container1 {
-    display: block;
-  }
-  #workoutPlanContainer {
+#workoutPlanContainer {
     transform: translateX(27%) translateY(60px)
   }
   .hidden {
