--- a/views/evaluation.handlebars
+++ b/views/evaluation.handlebars
@@ -1,4 +1,4 @@
-<div id="container1" class="questions-container p-2 text-white bg-dark border border-white rounded-4">
+<div id="container1" class="evaluation-container p-2 text-white bg-dark border border-white rounded-4">
   <div class="mb-3">
     <label for="question1" class="form-label">What is your age?</label>
     <input id="question1" type="text" class="form-control">
@@ -19,9 +19,9 @@
     <label for="question5" class="form-label">Describe your fitness goals.</label>
     <input id="question5" type="text" class="form-control">
   </div>
-  <a type="button" class="btn btn-secondary" onclick="showContainer('container2')">Next</a>
+  <button type="button" class="btn btn-secondary" onclick="showContainer('container1', 'container2')">Next</button>
 </div>
-<div id="container2" class="questions-container p-2 text-white bg-dark border border-white rounded-4 hidden">
+<div id="container2" class="evaluation-container p-2 text-white bg-dark border border-white rounded-4 hidden">
   <div class="mb-3">
     <label  for="question6" class="form-label">Do you have membership to a gym?</label>
     <input id="question6" type="text" class="form-control">
@@ -42,10 +42,10 @@
     <label  for="question10" class="form-label">What is your preferred exercise intensity level?</label>
     <input id="question10" type="text" class="form-control">
   </div>
-  <a type="button" class="btn btn-secondary" onclick="showContainer('container1')">Back</a>
-  <a type="button" class="btn btn-secondary" onclick="showContainer('container3')">Next</a>
+  <button type="button" class="btn btn-secondary" onclick="showContainer('container2', 'container1')">Back</button>
+  <button type="button" class="btn btn-secondary" onclick="showContainer('container2', 'container3')">Next</button>
 </div>
-<div id="container3" class="questions-container p-2 text-white bg-dark border border-white rounded-4 hidden">
+<div id="container3" class="evaluation-container p-2 text-white bg-dark border border-white rounded-4 hidden">
   <div class="mb-3">
     <label for="question11" class="form-label">How would you describe your current fitness level?</label>
     <input id="question11" type="text" class="form-control">
@@ -63,9 +63,10 @@ Examples: Weight scale, Measurements (waist, hips, etc.), Performance metrics (r
     <label for="question14" class="form-label">Do you have any existing medical conditions or injuries that may affect your ability to exercise?</label>
     <input id="question14" type="text" class="form-control">
   </div>
-    <a type="button" class="btn btn-secondary" onclick="showContainer('container2')">Back</a>
-    <a type="submit" class="btn btn-secondary" id="submitButton" onclick="showContainer('container4')">Submit</a>
+    <button type="button" class="btn btn-secondary" onclick="showContainer('container3', 'container2')">Back</button>
+    <button type="submit" class="btn btn-secondary" id="submitButton" onclick="showContainer('container3', 'container4')">Submit</button>
 </div>
-<div id="container4" class="questions-container p-2 text-white bg-dark border border-white rounded-4 hidden" id="workoutPlanContainer">
+<div id="container4" class="evaluation-container p-2 text-white bg-dark border border-white rounded-4 hidden" id="workoutPlanContainer">
+<button type="button" class="btn btn-secondary" onclick="showContainer('container4', 'container3')">Back</button>
 </div>
 
