--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,10 +11,8 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <h1 class="navbar-brand" href="/"></h1>
-  <img src="/photos/FitGenie.jpg" alt="Fit Genie Logo" class="logo">
-</a>
-  <a id="brand-title" href="/">Fit Genie</a>
+        <img src="/photos/FitGenie.jpg" alt="Fit Genie Logo" class="logo">
+      <a id="brand-title"href="/"><h1>Fit Genie</h1></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -66,6 +64,7 @@ chatbotId="sjCMMJm8_-yrjiZoOUoYw"
 domain="www.chatbase.co"
 defer>
 </script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/photos/images.js" defer></script>
 <script src="js/submit-prompts.js" defer></script>
 
