--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,8 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <img src="/photos/FitGenie.jpg" alt="Fit Genie Logo" class="logo">
-      <a id="brand-title"href="/"><h1>Fit Genie</h1></a>
+        <a href="/"><img src="/photos/FitGenie.jpg" alt="Fit Genie Logo" class="logo"></a>
+      <a href="/" id="title-link"><h1 id="brand-title">Fit Genie</h1></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
