--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+
 .form-control {
     display: block;
     width: 90%;
@@ -78,7 +79,13 @@ body {
     transform: translateY(25%);
     background-color: rgba(55, 55, 70, 0.75) !important;
 }
-
+.logo {
+    width: 100px; /* Adjust the width to your desired size */
+    height: auto; /* Maintain the aspect ratio */
+    position: absolute;
+    top: 10px; /* Adjust the top position to your desired value */
+    left: 250px; /* Adjust the left position to your desired value */
+  }
 .text {
     color: aliceblue;
 }
